Fixed memory leak in Password Manager UI.

view::Combobox is not owner of a model, previously the model was not deleted in CredentialsSelectionView.

BUG=692464

Review-Url: https://codereview.chromium.org/2691323002
Cr-Commit-Position: refs/heads/master@{#450670}

Former-commit-id: 3f04263b4bf4d2d0cc447e0b162a837d60b2ba73